# MAC0332-Project

./: .dockerignore  Dockerfile  README.md
backend/: .gitignore  Dockerfile  Dockerfile.dev  build.gradle.kts  build.sh  docker-compose.yml  pyproject.toml  settings.gradle.kts
backend/scrapping_env/: pyvenv.cfg
backend/src/main/resources/: application.yaml  cinemas.json  converte.py  linhas.json  movies.json  pricing.json  sessions.json  subway_lines.json
backend/src/main/resources/scraping/: __main__.py  const.py  movie.py  pyproject.toml  session.py  theater.py
backend/src/test/kotlin/: MovieRoutesTest.kt  TransportRoutesTest.kt
front-end/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
front-end/src/: App.css  App.test.tsx  App.tsx  index.css  leafletlet-utm.d.ts  main.tsx
front-end/src/components/: Movies.tsx
front-end/src/hooks/: useGeolocation.tsx
front-end/src/pages/cinemas/: CinemaCard.css  CinemaCard.tsx  CinemasPage.css  CinemasPage.tsx
front-end/src/pages/home/: HomePage.tsx
front-end/src/pages/movie/: MovieInfoContent.tsx  MovieInfoHeader.tsx  MoviePage.css  MoviePage.tsx
front-end/src/pages/movies/: MoviesPage.css  (+1 more)
front-end/src/services/: axiosInstance.ts
front-end/src/types/: cinema.tsx  geolocation.tsx  movie.tsx  route.tsx  types.tsx
front-end/src/utils/: convertToCinemaType.tsx  getAddress.tsx  getCoordinatesLatLon.tsx
frontend/: package-lock.json
(+29 files in other folders)
