[tool.poetry]
name = "scraping"
version = "0.1.0"
description = "Script for scraping movies and theaters from 'ingresso.com'"
authors = ["Leonardo Bozzetto <leobozzetto@usp.br>"]
license = "GPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
